default.css
/* ... */
.layout-mobile #itemDetailPage .btnPlay,
.layout-mobile #itemDetailPage .btnResume {
  width: 100% !important;
  flex-shrink: 0;
  background: var(--accent) !important;
  text-shadow: none;
  flex-flow: row;
  font-size: 150%;
  justify-content: flex-start;
  grid-gap: 5% !important;
  padding: 10px !important;
}

.layout-mobile #itemDetailPage .btnPlay::after {
  content: "Play";
}
.layout-mobile #itemDetailPage .btnResume::after {
  content: "Resume";
}
.layout-mobile #itemDetailPage .btnDownload::after {
  content: "Download";
}
.layout-mobile #itemDetailPage .btnPlayTrailer::after {
  content: "Trailer";
}
.layout-mobile #itemDetailPage .btnInstantMix::after {
  content: "Mix";
}
.layout-mobile #itemDetailPage .btnShuffle::after {
  content: "Shuffle";
}
.layout-mobile #itemDetailPage .btnCancelSeriesTimer::after {
  content: "Cancle Series";
}
.layout-mobile #itemDetailPage .btnCancelTimer::after {
  content: "Stop Recording";
}
.layout-mobile #itemDetailPage .btnPlaystate::after {
  content: "Watched";
}
.layout-mobile #itemDetailPage .btnUserRating::after {
  content: "Favourite";
}
.layout-mobile #itemDetailPage .btnSplitVersions::after {
  content: "Split";
}
.layout-mobile #itemDetailPage .btnMoreCommands::after {
  content: "More";
}

.layout-mobile #itemDetailPage .detailButton {
  width: calc(50% - 5px);
  background: #101010;
  justify-content: flex-start;
  flex-flow: revert;
  grid-gap: 6px;
}

.layout-mobile .primaryImageWrapper > img {
  position: absolute;
  left: 0;
  top: 0;
  overflow: hidden;
  -webkit-filter: brightness(65%);
  filter: brightness(65%);
  z-index: -1;
  -o-object-fit: cover;
  object-fit: cover;
  min-width: 100vw;
  min-height: 100vh;
  -webkit-mask-image: linear-gradient(0deg, transparent 15%, black 90%);
  mask-image: linear-gradient(0deg, transparent 15%, black 90%);
}

.primaryImageWrapper::before {
  content: "";
  display: none;
}

.layout-mobile
  .detailPagePrimaryContainer.padded-left.padded-right.detailRibbon {
  font-size: 120%;
  justify-content: flex-start;
  align-content: flex-end;
}

.cardText > .textActionButton {
  width: 100%;
  height: 100% !important;
  overflow: hidden;
  text-overflow: ellipsis;
}

/*Login Page*/

.skinHeader.semiTransparent.noHeaderRight {
  background-color: transparent !important;
}

div#loginPage {
  margin-top: 0 !important;
}

#loginPage h1::after {
  content: "Sign In";
  font-size: 32px;
}

#loginPage h1 {
  font-weight: 700;
  font-size: 0;
  margin-bottom: 21.44px;
  margin-top: 32px !important;
}

.inputContainer {
  margin-bottom: 1.8em;
  margin-top: 1.8em;
}

#loginPage .padded-left.padded-right.padded-bottom-page {
  background: #000000bf;
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  margin: 0;
  position: absolute;
  border-radius: 10px;
  width: 30vw;
  height: 70vh;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-content: center;
  justify-content: center;
  align-items: center;
  padding: 3em !important;
  max-width: 24em;
}

#loginPage .readOnlyContent {
  padding: 0 !important;
  width: 100% !important;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.manualLoginForm {
  height: 100%;
  width: 100%;
}

#loginPage .inputContainer {
  background: #333;
  border-radius: var(--rounding);
  height: 4em;
  position: relative;
}

#loginPage .inputLabel.inputLabelFocused,
#loginPage .inputLabel:not(.inputLabel-float) {
  font-size: 0.8em;
  left: 4%;
  top: 4%;
  transform: none;
}

.visualLoginForm {
  width: 100%;
  position: relative;
}

#divUsers {
  flex-flow: revert;
  overflow: scroll visible;
  justify-content: flex-start;
}

#loginPage .emby-input {
  height: 100%;
  border: none;
  background: transparent !important;
  -webkit-backdrop-filter: none;
  backdrop-filter: none;
  box-shadow: none !important;
  padding: 4% !important;
  font-size: 1.1em;
}

#loginPage .inputLabel {
  position: absolute;
  top: 50%;
  left: 4%;
  transform: translateY(-50%);
  font-size: 1.5em;
  font-weight: 300;
  transition: 0.2s ease;
}

/*Login background with radial gradient overlay to make it look like netflix login*/

#loginPage {
  background: linear-gradient(to top, rgba(0, 0, 0, 0.75), transparent 20%),
    linear-gradient(to bottom, rgba(0, 0, 0, 0.75), transparent 20%),
    linear-gradient(to left, rgba(0, 0, 0, 0.75), transparent 20%),
    linear-gradient(to right, rgba(0, 0, 0, 0.75), transparent 20%),
    url(https://assets.nflxext.com/ffe/siteui/vlv3/03fdc4bf-72f6-4926-83a7-a76e6a1a5591/9f09b85f-530e-4090-82c3-a60ea2b3177f/US-en-20211115-popsignuptwoweeks-perspective_alpha_website_large.jpg) !important;
  background-size: cover !important;
}

/*video Page*/

div#videoOsdPage {
  overflow: hidden !important;
  margin-top: 0 !important;
}

.mdl-slider-background-lower {
  background-color: var(--accent) !important;
}

.sliderBubble {
  background: var(--deftraback) !important;
  border-radius: 10px;
}

/*Scroll Bar theme*/

::-webkit-scrollbar-thumb {
  background: #505050 !important;
  border-radius: 10px !important;
}

.page {
  padding-bottom: 0 !important;
}

::-webkit-scrollbar {
  width: 10px !important;
  height: 10px !important;
}

::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0) !important;
  box-shadow: none !important;
}

::-webkit-scrollbar-track-piece {
  background-color: rgba(0, 0, 0, 0) !important;
}

.button-link {
  color: white !important;
}

/*Fonts */

@font-face {
  font-family: "Netflix Sans";
  font-weight: 100;
  src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff2)
      format("woff2"),
    url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff)
      format("woff");
}
/* ... */

